--- a/Lexiconline/src/App.scss
+++ b/Lexiconline/src/App.scss
@@ -1,3 +1,4 @@
+@use './style/variables' as *;
 //font-family: "Marck Script", cursive;
 @import url('https://fonts.googleapis.com/css2?family=Marck+Script&display=swap');
 //font-family: "Karla", sans-serif;
@@ -8,6 +9,7 @@
 body{
     margin: 0;
     font-family: "Karla", sans-serif;
+    
 }
 
 //COLOR MODS",
@@ -38,6 +40,6 @@ body{
     }
     @media (max-width: $mobile){
         body{
-        background-color: $bg-green;
+            background-color: $page-primary;
         }
     }
