--- a/Lexiconline/src/components/Header/Header.module.scss
+++ b/Lexiconline/src/components/Header/Header.module.scss
@@ -5,7 +5,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 0%;
-    height:30vh;
+    height:20rem;
     z-index: 0;
       
 }
@@ -15,7 +15,7 @@
     top: 3.2rem;
     background-color: #00000033;
     width: 100vw;
-    height: 30vh;
+    height: 20rem;
     z-index: 0;
     display: flex;
     justify-content: center;
@@ -24,6 +24,6 @@
         font-family: "Marck Script", cursive;
         color: $page-primary;
         font-weight: 400;
-        font-size: 50px;
+        font-size: 9vw;
     }
 }
