--- a/Lexiconline/src/style/_variables.scss
+++ b/Lexiconline/src/style/_variables.scss
@@ -4,3 +4,7 @@ $page-secondary: #57842A;
 $page-marking: #42651E;
 $search: #D9D9D9;
 $hmm-white: #FFF;
+
+$large: 1300px;
+$tablet: 980px;
+$mobile: 580px;
