--- a/Lexiconline/src/components/Footer/Footer.module.scss
+++ b/Lexiconline/src/components/Footer/Footer.module.scss
@@ -22,6 +22,14 @@
                 font-weight: 200;
             }
         }
+        @media(min-width: $large){
+            gap: 10rem;
+            ul{
+                li{
+                    font-size: 1.2rem;
+                }
+            }
+        }
     }
     .brandContainer{
         display: flex;
@@ -38,5 +46,12 @@
             font-weight: 300;
             font-size: 1rem;
         }
+        @media(min-width: $large){
+            h2{
+                font-size: 1.8rem;
+            }
+        }
     }
+
+    
 }
