--- a/Lexiconline/src/components/Header/Header.module.scss
+++ b/Lexiconline/src/components/Header/Header.module.scss
@@ -5,7 +5,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 0%;
-    height:20rem;
+    height:40vw;
     z-index: 0;
       
 }
@@ -15,7 +15,7 @@
     top: 3.2rem;
     background-color: #00000033;
     width: 100vw;
-    height: 20rem;
+    height: 40vw;
     z-index: 0;
     display: flex;
     justify-content: center;
@@ -25,5 +25,16 @@
         color: $page-primary;
         font-weight: 400;
         font-size: 9vw;
+    }
+
+}
+
+@media (min-width: $large){
+    .headerStyle, .backDrop{
+        height: 35vw
+    }
+
+    .backDrop{
+        top: 3.7rem;
     }
 }
