--- a/Lexiconline/src/components/SearchBox/SearchBox.module.scss
+++ b/Lexiconline/src/components/SearchBox/SearchBox.module.scss
@@ -21,7 +21,6 @@
         font-weight: 500;
         font-size: 1.2rem;
     }
-
     .searchContainer {
 
         input,
@@ -50,6 +49,19 @@
 
             &:hover {
                 background-color: $page-marking;
+            }
+        }
+    }
+
+    @media (min-width: $large){
+        h2{
+            font-size: 2rem;
+        } 
+        .searchContainer {
+            input,
+            button {
+                padding: 1rem;
+                font-size: 1.5rem;
             }
         }
     }
