--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,7 +1,7 @@
 @use '../../style/variables' as *;
 
 .headerStyle{
-    background-image:url('src/assets/pageImage.png');
+    background-image:url('/pageImage.png');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 0%;
